fix: in modals, hover editor popovers are displayed behind the modal #568

--- a/src/Styles/body.css
+++ b/src/Styles/body.css
@@ -203,8 +203,11 @@ body {
     }
 
     &.ntb-is-modal-displayed {
-        /* fix: popovers appearing under modal #568 */
+        /* fix: popovers + hover editor appearing under modal #568 */
         --layer-popover: calc(var(--layer-modal) + 1);
+        --he-popover-layer-new: calc(var(--layer-modal) + 1);
+        --he-popover-layer-active: calc(var(--layer-modal) + 1);
+        --he-popover-layer-inactive: calc(var(--layer-modal) + 1);
     }
 
 }
